update dynamic repository call